--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,15 @@
 body {
-    background: #343a40;
+    background:#fff;
 }
 
 h2 {
     text-align: center;
-    color: white;
+    color: #FC3A51;
 }
 
 p {
     text-align: center;
-    color: white;
+    color: #0E2430;
 }
 
 button,
@@ -23,10 +23,6 @@ ul {
     list-style: none;
 }
 
-a {
-    text-decoration: none;
-    color:black;
-}
 
 button{
     cursor: pointer;
@@ -49,3 +45,4 @@ img {
     display: inline-block;
     background-color: #fff;
 }
+
