--- a/src/layout/Layout.css
+++ b/src/layout/Layout.css
@@ -4,7 +4,7 @@
     top: 0;
     left: 0;
     z-index: 2;
-    background: #198754;
+    background: #0E2430;
 }
 
 .nav {
@@ -31,9 +31,15 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-size: 20px;
 }
 
 .nav-close,
 .nav-toggle {
     display: none;
+}
+
+.nav__link {
+    text-decoration: none;
+    color:#fff;
 }
