--- a/src/componets/About/About.css
+++ b/src/componets/About/About.css
@@ -3,21 +3,15 @@
     padding-top: 5.5rem;
     align-items: center;
     justify-content: center;
+    font-size: 2.5rem;
+    margin-bottom: 0.25rem;
 }
 
 .section-subtitle{
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-.about-container {
-    display: flex;
-    padding-top: 5.5rem;
-    column-gap: 2rem;
-    align-items: center;
-    column-gap: 5rem;
-    justify-content: start;
+    font-size: 1.3rem;
 }
 
 img {
@@ -29,17 +23,25 @@ img {
     height: 350px;
 }
 
-.about-info {
-    grid-template-columns: repeat(3, 140px);
-    gap: 0.5rem;
-    margin-bottom: 2rem;
-    width: 150px;
+.about-container {
+    display: flex;
+    padding-top: 4rem;
+    column-gap: 2rem;
+    align-items: center;
+    column-gap: 5rem;
+    justify-content: start;
 }
 
 .about-box {
-    background-color:darkmagenta;
     border: 1px solid black;
     border-radius: 0.75rem;
     text-align: center;
     padding: 1rem 1.25rem;
+}
+
+.about-info {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 10px;
+    grid-row-gap: 2em;
 }
