update all skill components

--- a/src/componets/About/About.css
+++ b/src/componets/About/About.css
@@ -33,6 +33,7 @@ img {
 }
 
 .about-box {
+    background: #fff;
     border: 1px solid black;
     border-radius: 0.75rem;
     text-align: center;
