--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,30 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+
+
 body {
-    background:#fff;
+    background: hsl(0, 0%, 98%);
 }
+
+* {
+    box-sizing: border-box;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+body,
+button,
+input,
+textarea {
+    font-family: "Poppins", sans-serif;
+    font-size: 1rem;
+}
+
+ul {
+    list-style: none;
+}
+
 
 h2 {
     text-align: center;
@@ -10,18 +34,6 @@ p {
     text-align: center;
     color: #0E2430;
 }
-
-button,
-input,
-textarea {
-    font-family: 30px;
-    font-size: 60px;
-}
-
-ul {
-    list-style: none;
-}
-
 
 button{
     cursor: pointer;
