add qualification component

--- a/src/componets/qualification/Qualification.css
+++ b/src/componets/qualification/Qualification.css
@@ -8,5 +8,75 @@
     margin-bottom: var(--mb-2);
 }
 .qualification-button {
-    font-size: 1;
+    font-size: var(--h3-font-size);
+    font-weight: var(--font-medium);
+    color: var(--title-color);
+    margin: 0 var(--mb-1);
+    cursor: pointer;
 }
+
+.qualification-button:hover {
+    color: var(--title-color-dark);
+}
+
+.qualification-icon {
+    font-size: 1.8rem;
+    margin-right: var(--mb-0-25);
+}
+
+.qualification-active {
+    color: var(--title-color-dark);
+}
+
+.qualification-sections {
+    display: grid;
+    grid-template-columns: 0.5fr;
+    justify-content: center;
+}
+
+.qualification-content {
+    display: none;
+}
+
+.qualification-content-active {
+    display: block;
+}
+
+.qualification-data {
+    display: grid;
+    grid-template-columns: 1fr max-content 1fr;
+    column-gap: 1.5rem;
+}
+
+.qualification-title {
+    font-size: var(--normal-font-size);
+    font-weight: var(--font-medium);
+}
+
+.qualification-subtitle {
+    display: inline-block;
+    font-size: var(--small-font-size);
+    margin-bottom: var(--mb-1);
+}
+
+
+.qualification-calender {
+    font-size: var(--font-medium);
+}
+
+.qualification-rounder {
+    display: inline-block;
+    width: 13px;
+    height: 13px;
+    background-color: var(--text-color);
+    border-radius: 50%;
+}
+
+.qualification-line {
+    display: block;
+    width: 1px;
+    height: 100%;
+    background-color: var(--text-color);
+    transform: translate(6px, -7px);
+}
+
