add functionality to titles and change styles

--- a/src/componets/qualification/Qualification.css
+++ b/src/componets/qualification/Qualification.css
@@ -80,3 +80,36 @@
     transform: translate(6px, -7px);
 }
 
+/*=============== BREAKPOINTS ===============*/
+/* For large devices */
+@media screen and (max-width: 992px) {
+    .qualification-container {
+        margin-left: auto;
+        margin-right: auto;
+    }
+  }
+  
+  /* For medium devices */
+  @media screen and (max-width: 768px) {
+    .qualification-container{
+        margin-left: var(--mb-1-5);
+        margin-right: var(--mb-1-5);
+    }
+  }
+  
+  @media screen and (max-width: 576px) {
+    .qualification-sections{
+        grid-template-columns: initial;
+    }
+
+    .qualification-button{
+        margin: 0 var(--mb-0-75);
+    }
+  }
+  
+  /* For small devices */
+  @media screen and (max-width: 350px) {
+    .qualification-data{
+        gap: 0.5rem;
+    }
+  }
