--- a/src/componets/layout/Layout.css
+++ b/src/componets/layout/Layout.css
@@ -15,12 +15,13 @@
     column-gap: 1rem;
 }
 
+
 .nav__logo,
-.nav-toggle,
-.nav-close {
+.nav-toggle{
     color: var(--title-color);
     font-weight: var(--font-medium);
 }
+
 
 .nav__list {
     display: flex;
@@ -34,7 +35,7 @@
     font-size: var(--small-font-size);
     color: var(--title-color);
     font-weight: var(--font-medium);
-    transition: 0.3s;
+    transition: .3s;
 }
 
 .nav__icon,
@@ -50,7 +51,7 @@
 
 /*=============== BREAKPOINTS ===============*/
   /* For medium devices */
-  @media screen and (max-width: 768px) {
+@media screen and (max-width: 768px) {
    .header {
     top: initial;
     bottom: 0;
@@ -60,7 +61,7 @@
     height: var(--header-height);
    }
 
-   .nav_menu{
+   .nav__menu { 
     position: fixed;
     bottom: -100%;
     left: 0;
@@ -72,7 +73,7 @@
     transition: 0.3s;
    }
 
-   .show-menu{
+   .show-menu {
     bottom: 0;
    }
 
@@ -83,36 +84,36 @@
    }
 
    .nav__icon{
-     font-size: 1.2rem;
-   }
+    font-size: 1.2rem;
+  }
 
-   .nav-close {
-        position: absolute;
-        right: 1.3rem;
-        bottom: 0.5rem;
-        font-size: 1.5rem;
-        cursor: pointer;
-        color: var(--title-color);
-   }
+  .nav-close {
+    position: absolute;
+    right: 1.3rem;
+    bottom: 0.5rem;
+    font-size: 1.5rem;
+    cursor: pointer;
+    color: var(--title-color);
+  }
 
-   .nav-close:hover {
-        color: var(--title-color-dark);
-   }
+  .nav-close:hover {
+    color: var(--title-color-dark);
+  }
 
-   .nav_toggle {
+  .nav-toggle {
     font-size: 1.1rem;
     cursor: pointer;
    }
 
    .nav__icon,
    .nav-close,
-   .nav_toggle{
+   .nav-toggle{
      display: block;
    }
 }
 
 @media screen and (max-width: 350px) {
-    .nav_menu {
+    .nav__menu {
         padding: 2rem 0.25rem 4rem;
     }
 
@@ -120,5 +121,3 @@
         column-gap: 0;
     }
 }
-  
- 
