--- a/src/componets/About/About.css
+++ b/src/componets/About/About.css
@@ -1,3 +1,50 @@
+.about-container {
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    column-gap: 4rem;
+}
+
+.about-img {
+    width: 350px;
+    height: 300px;
+    border-radius: 1.5rem;
+    justify-self: center;
+}
+
+.about-info {
+    grid-template-columns: repeat(3, 140px);
+    gap: 0.5rem;
+    margin-bottom: var(--mb-2);
+}
+
+.about-box {
+    background-color: var(--container-color);
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 0.75rem;
+    text-align: center;
+    padding: 1rem 1.25rem;
+}
+
+.about_icon {
+    font-size: 1.5rem;
+    color: var(--title-color);
+    margin-bottom: var(--mb-0-5);
+}
+
+.about-title {
+    font-size: var(--small-font-size);
+    font-weight: var(--font-mediun);
+}
+
+.about-subtitle {
+    font-size: var(--tiny-font-size);
+}
+
+.about-description{
+    padding: 0 4rem 0 0;
+    margin-bottom: var(--mb-2-5);
+}
+
 .section-title {
     display: flex;
     padding-top: 5.5rem;
@@ -12,37 +59,56 @@
     align-items: center;
     justify-content: center;
     font-size: 1.3rem;
+    margin-bottom: 2rem;
 }
 
-img {
-    background-repeat: no-repeat;
-    background-size: cover;
-    border-radius: 1.5rem;
-    justify-self: center;
-    width: 350px;
-    height: 350px;
-}
+/*=============== BREAKPOINTS ===============*/
+/* For large devices */
+@media screen and (max-width: 992px) {
+    .about-container{
+        grid-template-columns: 1fr;
+        row-gap: 2.5rem;
+    }
 
-.about-container {
-    display: flex;
-    padding-top: 4rem;
-    column-gap: 2rem;
-    align-items: center;
-    column-gap: 5rem;
-    justify-content: start;
-}
+    .about-img{
+        height: 150px;
+        width: 220px;
+    }
 
-.about-box {
-    background: #fff;
-    border: 1px solid black;
-    border-radius: 0.75rem;
-    text-align: center;
-    padding: 1rem 1.25rem;
-}
+    .about-box{
+        padding: 0.75rem 0.5rem;
+    }
 
-.about-info {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-column-gap: 10px;
-    grid-row-gap: 2em;
-}
+    .about-data{
+        text-align: center;
+    }
+
+    .about-info{
+        justify-content: center;
+    }
+
+    .about-description{
+        padding: 0 5rem;
+        margin-bottom: 2rem;
+    }
+  }
+  
+  /* For medium devices */
+  @media screen and (max-width: 576px) {
+    .about-info{
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    .about-description{
+        padding: 0;
+    }
+  }
+  
+  /* For small devices */
+  @media screen and (max-width: 350px) {
+    .about-info{
+        grid-template-columns: repeat(2, 1fr);
+    }
+  }
+  
+  
