--- a/src/componets/Portfolio/Portfolio.css
+++ b/src/componets/Portfolio/Portfolio.css
@@ -1,9 +1,121 @@
+.work-filters {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 0.75rem;
+    margin-bottom: var(--mb-2);
+}
+
+.work-item {
+    cursor: pointer;
+    color: var(--title-color);
+    padding: 0.25rem 0.75rem;
+    font-weight: var(--font-medium);
+    border-radius: 0.5rem;
+    text-transform: capitalize;
+}
+
+.work-item:hover {
+    background-color: var(--title-color);
+    color: var(--container-color);
+
+}
+
 .work-container {
     grid-template-columns: repeat(2, max-content);
     gap: 3rem;
     justify-content: center;
 }
 
-.wort-img {
-    width: 295px;
+.work-card {
+    background-color: var(--container-color);
+    border:  1px solid rgba(0, 0, 0, 0.1);
+    padding: 1.25rem;
+    border-radius: 1rem;
 }
+
+.work-img {
+    width: 295px;
+    height: 195px;
+    border-radius: 1rem;
+    margin-bottom: var(--mb-1);
+}
+
+.work-title {
+    font-size: var(--normal-font-size);
+    font-weight: var(--font-medium);
+    font-weight: var(--mb-0-5);
+}
+
+.work-button {
+    color: var(--text-color);
+    font-size: var(--small-font-size);
+    display: flex;
+    align-items: center;
+    column-gap: 0.25rem;
+}
+
+.work-button-icon {
+    font-size: 1rem;
+    transition: 0.4s;
+}
+
+.work-button:hover .work-button-icon {
+    transform: translateX(0.25rem);
+}
+
+/* active work */
+
+.active-work {
+    background-color: var(--title-color);
+    color: var(--container-color);
+}
+
+/*=============== BREAKPOINTS ===============*/
+/* For large devices */
+@media screen and (max-width: 992px) {
+    .work-container {
+        gap: 1.25rem;
+    }
+
+    .work-card {
+        padding: 1rem;
+    }
+
+    .work-img {
+        margin-bottom: 0.75rem;
+    }
+
+    .work-title {
+        margin-bottom: 0.25rem;
+    }
+}
+  
+  /* For medium devices */
+@media screen and (max-width: 768px) {
+    .work-container {
+        grid-template-columns: max-content;
+    }
+}
+  
+@media screen and (max-width: 576px) {
+    .work-container {
+        grid-template-columns: 1fr;
+    }
+
+    .work-img {
+        width: 100%;
+    }
+}
+  
+  /* For small devices */
+@media screen and (max-width: 350px) {
+    .work-item {
+        font-size: var(--small-font-size);
+    }
+
+    .work-filters {
+        column-gap: 0.25rem;
+    }
+}
+  
