--- a/src/App.css
+++ b/src/App.css
@@ -83,7 +83,10 @@ textarea {
 }
 
 body {
-  background-color: var(--body-color);
+  background: -webkit-linear-gradient(left, #50a3a2 0%, #78cc6d 100%);
+  background: -moz-linear-gradient(left, #50a3a2 0%, #78cc6d 100%);
+  background: -o-linear-gradient(left, #50a3a2 0%, #78cc6d 100%);
+  background: linear-gradient(to right, #50a3a2 0%, #78cc6d 100%); 
   color: var(--text-color);
 }
 
