--- a/src/componets/Contact/Contact.css
+++ b/src/componets/Contact/Contact.css
@@ -101,6 +101,7 @@
     font-size: var(--small-font-size);
     padding: 0.25rem;
     background-color: var(--body-color);
+    border-radius: 10px;
     z-index: 10;
 }
 
