--- a/src/componets/layout/Layout.css
+++ b/src/componets/layout/Layout.css
@@ -4,7 +4,7 @@
     top: 0;
     left: 0;
     z-index: var(--z-fixed);
-    background: var(--body-color);
+    background: transparent;
 }
 
 .nav {
